--- a/jtc_index.html
+++ b/jtc_index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset= "UTF-8">
     <title> Jedds Tree Care</title>
-    <link href
+    <link href= "jtc_base.css"rel = "stylesheet">
+    <link href= "jtc_layout.css"rel = "stylesheet">
 <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 1
@@ -19,6 +20,10 @@
 </head>
 
 <body>
+    <header>
+        <a href="jtc_index.html">Home</a>
+        <a href="jtc_services.html">Services</a>
+    <aside></aside>
 
 </body>
 
