--- a/jtc_services.html
+++ b/jtc_services.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Jedds Tree Services</title>
+    <link href= "jtc_base.css"rel = "stylesheet">
+    <link href= "jtc_layout.css"rel = "stylesheet">
+
 <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 1
@@ -65,7 +68,7 @@
         We are ready to help as you landscape your property by replanting old trees and planting new
         ones. We can work with your trees, shrubbery, and other greenery to enhance the natural 
         beauty of your property and help you achieve your landscaping vision. </h1>
-        
+        <!--Today i created most of the tree website including adding a picture and a serveces page-->
 
 </body>
 
